--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+1998-12-16  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* configure.in (AC_CONFIG_SUBDIRS): added libltdl
+	* Makefile.am (SUBDIRS): build libltdl by default
+	(DIST_SUBDIRS): simplify distribution of demo and mdemo
+	(libtool, clibtool, libtoolize, ltconfig, ltmain.sh): add
+	srcdir where appropriate
+	(ACINCLUDE_M4_LIST): new rule for maintaining links from
+	acinclude.m4 to libtool.m4
+	(*demo/Makefile.in): don't update autoconf/automake files any
+	more; make check is needed
+
 1998-12-14  Gary V. Vaughan  <gvaughan@oranda.demon.co.uk>
 
 	* ltconfig.in (archive_cmds): tweaked for cygwin b18->b20.1
