--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1998-12-16  Stephan Kulow  <coolo@kde.org>
+
+	* ltmain.in (freebsd-aout, freebsd-elf): added missing dot to
+	versuffix
+
 1998-12-16  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* libltdl/Makefile.am (EXTRA_DIST): removed, nothing needed
