--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1998-12-16  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* THANKS: added Stephan Kulow; removed Gary V. Vaughan and Thomas
+	Tanner, now that they're AUTHORS
+
 1998-12-16  Stephan Kulow  <coolo@kde.org>
 
 	* ltmain.in (freebsd-aout, freebsd-elf): added missing dot to
