--- a/THANKS
+++ b/THANKS
@@ -14,7 +14,6 @@ Carl D. Roth <roth@cse.ucsc.edu>
 Charles S. Kerr <cskerr@delenn.jccbi.gov>
 Chris P. Ross <cross@eng.us.uu.net>
 Eric Estievenart <eric@via.ecp.fr>
-Gary V. Vaughan <gvaughan@oranda.demon.co.uk>
 H.J. Lu <hjl@gnu.org>
 Ian Lance Taylor <ian@cygnus.com>
 Joel Cannon <cannon@alpha.centenary.edu>
@@ -25,8 +24,8 @@ Marc J. Fraioli <fraioli@dg-rtp.dg.com>
 Mark Kettenis <kettenis@phys.uva.nl>
 Mimi Burbank <mimi@scri.fsu.edu>
 Oliver Guntermann <og@informatik.uni-hannover.de>
+Stephan Kulow <coolo@kde.org>
 Thomas Esser <te@informatik.uni-hannover.de>
-Thomas Tanner <tanner@gmx.de>
 Tom Tromey <tromey@cygnus.com>
 Ulrich Drepper <drepper@ipd.info.uni-karlsruhe.de>
 Volker Kuhlmann <kuhlmav@elec.canterbury.ac.nz>
