* Makefile.am (cvs-dist): our release tags are in lower case 	(cvs-diff): ditto 	(EXTRA_DIST): added README-alpha 	(DIST_SUBDIRS): added depdemo 	* README-alpha: minor adaptations 	* demo/Makefile.am, mdemo/Makefile.am, depdemo/Makefile.am: 	removed comment about special needs for distribution 	* depdemo/Makefile.am: don't generate dependencies 	* depdemo/configure.in: modified version number

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 1998-12-16  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* Makefile.am (cvs-dist): our release tags are in lower case
+	(cvs-diff): ditto
+	(EXTRA_DIST): added README-alpha
+	(DIST_SUBDIRS): added depdemo
+	* README-alpha: minor adaptations
+	* demo/Makefile.am, mdemo/Makefile.am, depdemo/Makefile.am:
+	removed comment about special needs for distribution
+	* depdemo/Makefile.am: don't generate dependencies
+	* depdemo/configure.in: modified version number
+
 	* ltmain.in (-force-static, force_static): removed
 	* libltdl/Makefile.am (CFLAGS): ditto
 	* libltdl/configure.in: check for memory.h, rindex() and
